--- a/ASMC.Devices/packages.config
+++ b/ASMC.Devices/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Imaging" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Video" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net462" />
   <package id="Kelary.Ivi.Visa" version="5.11.3422" targetFramework="net462" />
   <package id="MathNet.Numerics" version="4.12.0" targetFramework="net462" />
   <package id="NLog" version="4.7.3" targetFramework="net462" />
