--- a/Plugins/Keysight/N8975A/N8957APlugin/N8957APlugin.csproj
+++ b/Plugins/Keysight/N8975A/N8957APlugin/N8957APlugin.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Resources\N8975A_8_3_4.doc" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
