--- a/Plugins/Tektronix/TDS2024/TDS2024B.csproj
+++ b/Plugins/Tektronix/TDS2024/TDS2024B.csproj
@@ -69,6 +69,9 @@
       <Name>TDS_BasePlugin</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
