--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
@@ -91,6 +91,9 @@
     <Compile Include="View\MeasuringForceView.xaml.cs">
       <DependentUpon>MeasuringForceView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\PerpendicularPressureView.xaml.cs">
+      <DependentUpon>PerpendicularPressureView.xaml</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -139,6 +142,10 @@
   <ItemGroup />
   <ItemGroup>
     <Page Include="View\MeasuringForceView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\PerpendicularPressureView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
