Исправлены операции с точкой

--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
@@ -104,6 +104,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="ИЧ-10 Периодическая МП 2192-92.docx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\AP.Extension\AP.Extension.csproj">
