--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Procedures.cs" />
     <Compile Include="ViewModel\MeasuringForceViewModel.cs" />
     <Compile Include="ViewModel\PerpendicularPressureViewModel.cs" />
+    <Compile Include="ViewModel\WorkInPpiViewModel.cs" />
     <Compile Include="View\MeasuringForceView.xaml.cs">
       <DependentUpon>MeasuringForceView.xaml</DependentUpon>
     </Compile>
