загрузка файлов точности

--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccuracyChatacteristic.cs" />
+    <Compile Include="AccRangeAttribute.cs" />
     <Compile Include="BasicOperation.cs" />
     <Compile Include="HelpsMeasureUnits.cs" />
     <Compile Include="Interface\IConvertPhysicalQuantity.cs" />
