--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="OWEN\opisanie_biblioteki_owenionet.pdf" />
     <None Include="packages.config" />
     <None Include="USB_Device\SiliconLabs\AN169.pdf" />
