--- a/AP.Utils/packages.config
+++ b/AP.Utils/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.0.35" targetFramework="net462" />
   <package id="NLog" version="4.7.3" targetFramework="net462" />
   <package id="NLog.Config" version="4.7.3" targetFramework="net462" />
   <package id="NLog.Schema" version="4.7.3" targetFramework="net462" />
