--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
@@ -53,8 +53,16 @@
     <Reference Include="DevExpress.Xpf.Core.v17.2">
       <HintPath>..\..\..\..\..\packages\DevExpress.v17.2\DevExpress.Xpf.Core.v17.2.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\..\packages\NLog.4.7.3\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
