--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/packages.config
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/packages.config
@@ -3,4 +3,5 @@
   <package id="Accord" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Video" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net462" />
+  <package id="NLog" version="4.7.3" targetFramework="net462" />
 </packages>
