Интерфейс настроек индикатора

--- a/ASMC.Devices.UInterface/ASMC.Devices.UInterface.csproj
+++ b/ASMC.Devices.UInterface/ASMC.Devices.UInterface.csproj
@@ -67,7 +67,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnalogDevice\ViewModel\IchBaseSettingUi.cs" />
+    <Compile Include="AnalogDevice\ViewModel\IchIchGost577SettingUi.cs" />
     <Compile Include="AnalogDevice\View\IchSettingView.xaml.cs">
       <DependentUpon>IchSettingView.xaml</DependentUpon>
     </Compile>
