Добавлена библиотека Xseed

--- a/ASMC.Devices.UInterface/packages.config
+++ b/ASMC.Devices.UInterface/packages.config
@@ -3,4 +3,5 @@
   <package id="Accord" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Video" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net462" />
+  <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net462" />
 </packages>
