--- a/ASMC.Devices.UInterface/ASMC.Devices.UInterface.csproj
+++ b/ASMC.Devices.UInterface/ASMC.Devices.UInterface.csproj
@@ -50,6 +50,7 @@
     <Reference Include="DevExpress.Xpf.Core.v17.2">
       <HintPath>\\zrto.int\OGMetr\AutoMeas\DLL\DevExpress.Xpf.Core.v17.2.dll</HintPath>
     </Reference>
+    <Reference Include="OwenioNet, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
