--- a/AP.Extension/AP.Extension.csproj
+++ b/AP.Extension/AP.Extension.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MeasPointExtension.cs" />
-    <Compile Include="ObjectExtension.cs" />
+    <Compile Include="IDeviceBaseExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
