--- a/ASMC.Common/packages.config
+++ b/ASMC.Common/packages.config
@@ -4,5 +4,6 @@
   <package id="Accord.Video" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net462" />
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net462" />
+  <package id="FastMember" version="1.5.0" targetFramework="net462" />
   <package id="NLog" version="4.7.3" targetFramework="net462" />
 </packages>
