--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/DialIndicator.csproj
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/DialIndicator.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A591274A-2626-4FA6-8C9C-BBAC6586EF07}</ProjectGuid>
     <OutputType>library</OutputType>
-    <RootNamespace>Indicator_10</RootNamespace>
-    <AssemblyName>Indicator_10</AssemblyName>
+    <RootNamespace>mp2192_92.DialIndicator</RootNamespace>
+    <AssemblyName>DialIndicator</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -78,7 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="First\OpertionFirsVerf.cs" />
-    <Compile Include="Indicator_10.cs" />
+    <Compile Include="DialIndicator_10.cs" />
     <Compile Include="Periodic\OpertionPeriodicVerf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -112,7 +112,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="ИЧ-10 Периодическая МП 2192-92.docx" />
+    <None Include="ИЧ-10 Первичная МП 2192-92.dotx" />
+    <None Include="ИЧ-10 Периодическая МП 2192-92.dotx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\AP.Extension\AP.Extension.csproj">
