--- a/Plugins/APPA/APPA-107N-109N/APPA-107N-109NBasePlugin.csproj
+++ b/Plugins/APPA/APPA-107N-109N/APPA-107N-109NBasePlugin.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\AP.Extension\AP.Extension.csproj">
+      <Project>{7208342f-bf11-4241-b032-30f196ce1a6c}</Project>
+      <Name>AP.Extension</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\AP.Math\AP.Math.csproj">
       <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
       <Name>AP.Math</Name>
