--- a/Plugins/OWEN/TRM202/OWEN_TRM202/OWEN_TRM202.csproj
+++ b/Plugins/OWEN/TRM202/OWEN_TRM202/OWEN_TRM202.csproj
@@ -33,8 +33,16 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Data.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>\\zrto.int\OGMetr\AutoMeas\DLL\DevExpress.Data.v17.2.dll</HintPath>
+    </Reference>
     <Reference Include="DevExpress.Mvvm.v17.2">
       <HintPath>\\zrto.int\OGMetr\AutoMeas\DLL\DevExpress.Mvvm.v17.2.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.Xpf.Core.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\packages\DevExpress.v17.2\DevExpress.Xpf.Core.v17.2.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
       <HintPath>..\..\..\..\packages\NLog.4.7.3\lib\net45\NLog.dll</HintPath>
@@ -60,11 +68,16 @@
     <Compile Include="OWEN_TRM202_MP2007_Plugin.cs" />
     <Compile Include="OWEN_TRM202_MP2006_Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\TermocoupleViewModel.cs" />
     <Compile Include="View\TermocupleView.xaml.cs">
       <DependentUpon>TermocupleView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\AP.Extension\AP.Extension.csproj">
+      <Project>{7208342f-bf11-4241-b032-30f196ce1a6c}</Project>
+      <Name>AP.Extension</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\AP.Math\AP.Math.csproj">
       <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
       <Name>AP.Math</Name>
@@ -72,6 +85,10 @@
     <ProjectReference Include="..\..\..\..\AP.Utils\AP.Utils.csproj">
       <Project>{ff877f85-43b8-4779-a822-a2904adc1100}</Project>
       <Name>AP.Utils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\ASMC.Common\ASMC.Common.csproj">
+      <Project>{7FE244D8-06C9-4B0E-B2E5-7E92AC14E48D}</Project>
+      <Name>ASMC.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\ASMC.Core\ASMC.Core.csproj">
       <Project>{adb547eb-33aa-4c07-a493-c80729632a8b}</Project>
